# RustyClaw

./: .gitignore  .kilocodeignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  SECURITY.md  install.sh  mini-README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-version-watch.yml  readme-stale-scan.yml  release.yml
assets/: demo.cast  record-demo.sh
docs/superpowers/plans/: 2026-04-10-auto-commit-undo.md  2026-04-10-auto-fix-loop.md  2026-04-12-phase3-browser-watch-diff-skills.md
docs/superpowers/specs/: 2026-04-10-auto-commit-undo-design.md  2026-04-10-auto-fix-loop-design.md  2026-04-12-browser-watch-diff-recipes-design.md
scripts/: perf-smoke.sh  readme-lint.sh  xtts-server.py
sdk/: README.md  protocol.md
sdk/examples/: ask-question.sh  health-check.sh  tool-approval.sh
src/: autocommit.rs  autofix.rs  config.rs  cost.rs  deeplink.rs  distro.rs  hooks.rs  lib.rs  main.rs  memory.rs  query_engine.rs  rollback.rs  router.rs  sandbox.rs  settings.rs  spawn.rs  voice.rs  watch.rs
src/api/: mod.rs  ollama.rs  openai_compat.rs  types.rs
src/browser/: actions.rs  approval_gate.rs  browse_loop.rs  cdp.rs  element.rs  extraction.rs  loop_detector.rs  middleware.rs  mod.rs  planner.rs  snapshot.rs  yolo_ack.rs
src/commands/: mod.rs
src/compact/: mod.rs
src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src/permissions/: mod.rs
src/rag/: indexer.rs  mod.rs  search.rs
src/sdk/: approval.rs  mod.rs  protocol.rs  session.rs
src/sdk/transport/: mod.rs  stdio.rs
src/session/: mod.rs
src/skills/: mod.rs
src/tools/: agent.rs  ask_user.rs  bash.rs  brief_tool.rs  browser_tools.rs  config_tool.rs  cron.rs  discover_skills.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lsp.rs  mcp_resources.rs  memory.rs  mod.rs  multi_edit.rs  notebook.rs  plan_mode.rs  powershell.rs  send_message.rs  skill_tool.rs  sleep.rs  tasks.rs  team_tools.rs  todo.rs  tool_search.rs  web_browser.rs  web_fetch.rs  web_search.rs  workflow.rs  worktree.rs
src/tui/: app.rs  diff.rs  events.rs  markdown.rs  mod.rs  render.rs  run.rs
tests/: approval_gate_tests.rs  autocommit_integration.rs  autofix_loop_integration.rs  bash_process_group_tests.rs  browse_config_tests.rs  browse_done_tool_tests.rs  browse_integration.rs  browse_parse_tests.rs  browser_actions_tests.rs  browser_cdp_tests.rs  diff_tests.rs  dogfood_v02.rs  loop_detector_tests.rs  memory_tests.rs  middleware_smoke.rs  permission_shutdown_tests.rs  phase_router_tests.rs  rollback_tests.rs  sdk_approval.rs  sdk_integration.rs  sdk_protocol.rs  security_hardening.rs  skills_enhanced_tests.rs  tool_context_live_config_tests.rs  voice_routing_tests.rs  watch_tests.rs
